# novel-rewriter

./: .gitignore  AID_LEARNING_INSTALL_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  INSTALL_STEP_BY_STEP.md  README.md  install.bat  install.py  install.sh  package.json  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  main.py
backend/core/: __init__.py  pipeline.py  quality_checker.py  task_scheduler.py
backend/models/: __init__.py  enums.py  schemas.py
backend/prompts/: __init__.py  chapter_prompts.py  paragraph_prompts.py  system_prompts.py  task_prompts.py
backend/services/: __init__.py  chapter_ctrl.py  context_mgr.py  copyright.py  deai.py  llm_client.py  parser.py  world_builder.py  writer.py
backend/utils/: __init__.py  file_utils.py  text_utils.py
cli/: index.js
cli/commands/: export.js  start.js  status.js
cli/utils/: api.js  display.js
config/: config.example.yaml  config.yaml
data/input/: shuihu_chapter1.txt  xingchenbian_chapter1.txt
data/output/: 星辰变第一章_现代修真_仿写.txt  水浒传第一回_现代警匪_仿写.txt
data/templates/: battle.json
tests/: __init__.py  test_e2e_shuihu.py  test_e2e_xingchenbian.py  test_integration.py  test_parser.py
